developing the backend of the notes taking app with complete working

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Notes Taking App</h1>
         <div class="control">
             <div>
-                <label for="font size">Font size:</label>
-                <input type="number" value="16" id="fontsize">
+                <label for="fontSize">Font Size:</label>
+                <input type="number" value="16" id="fontSize">
             </div>
 
             <div>
@@ -28,14 +28,14 @@
             </div>
 
             <div>
-                <label for="fontcolor">Font Color:</label>
-                <input type="color" value="#000000" id="fontcolor">
+                <label for="color">Font Color:</label>
+                <input type="color" value="#000" id="color">
             </div>
         </div>
 
-        <textarea  id="text" placeholder="Write notes here...."></textarea>
+        <textarea  id="note" placeholder="Write notes here...."></textarea>
         <button id="postNotes">Post Notes</button>
-        <div id="notesList"></div>
+        <div id="noteList"></div>
     </div>
 </body>
 <script src="app.js"></script>
